--- a/package.json
+++ b/package.json
@@ -4,54 +4,65 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format": "prettier --write \"{components,content,docs,pages,styles,utils}/**/*.{js,jsx,ts,tsx,css,scss,json,yaml,md}\"",
-    "format:check": "prettier --check \"{components,content,docs,pages,styles,utils}/**/*.{js,jsx,ts,tsx,css,scss,json,yaml,md}\"",
-    "lint": "eslint --fix '{components,pages,utils}/**/*.{js,jsx,ts,tsx}'",
-    "lint:check": "eslint '{components,pages,utils}/**/*.{js,jsx,ts,tsx}'",
-    "prepare": "husky install",
-    "pre-commit": "npm run format && git add -A ."
+    "lint": "eslint '{components,pages,utils}/**/*.{js,json,jsx,ts,tsx}'",
+    "lint:fix": "yarn lint --fix",
+    "commit": "commit",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@octokit/core": "^3.5.1",
+    "@next/font": "^13.1.1",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.1",
-    "axios": "^0.22.0",
+    "@tailwindcss/typography": "^0.5.8",
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.2.2",
     "classnames": "^2.3.2",
-    "csv-parse": "^4.16.3",
-    "eslint-plugin-tailwindcss": "^3.8.0",
     "formik": "^2.2.9",
-    "framer-motion": "^4.1.17",
-    "heroicons": "^1.0.4",
+    "framer-motion": "^8.1.4",
     "multiselect-react-dropdown": "^2.0.25",
-    "next": "^13.0.0",
-    "next-pwa": "^5.3.1",
-    "next-seo": "^4.28.1",
+    "next": "^13.1.1",
+    "next-pwa": "^5.6.0",
+    "next-seo": "^5.15.0",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.2.0",
-    "react-toastify": "^8.0.3",
-    "react-youtube": "^10.0.0",
+    "react-icons": "^4.7.1",
+    "react-toastify": "^9.1.1",
+    "sharp": "^0.31.3",
+    "tailwindcss": "^3.2.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-react-require": "^3.1.3",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "^11.1.2",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.2",
-    "postcss": "^8.4.5",
-    "postcss-import": "^14.0.2",
-    "postcss-nested": "^5.0.6",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@commitlint/prompt-cli": "^17.3.0",
+    "@types/eslint": "^8.4.10",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "^13.1.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-with-typescript": "^26.0.0",
+    "eslint-plugin-const-case": "^1.2.2",
+    "eslint-plugin-diff": "^2.0.1",
+    "eslint-plugin-editorconfig": "^4.0.2",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-json-format": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-tailwindcss": "^3.8.0",
+    "husky": "^8.0.3",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.0.18"
+    "typescript": "^4.9.4",
+    "yarn": "^1.22.19"
   },
   "version": "0.9.0",
   "name": "4c-site",
