--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -22,7 +22,7 @@
       "description": "Contains resources to learn about Open Source, Git, and GitHub.",
       "link": "https://github.com/Pradumnasaraf/open-source-with-pradumna",
       "twitter": "https://twitter.com/pradumna_saraf",
-      "live_link": "https://oswp.study/#/",
+      "live_link": "https://os.pradumnasaraf.dev/#/",
       "stack": [
         "All",
         "Markdown",
