--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "framer-motion": "^8.1.4",
+    "million": "^2.6.0-beta.13",
     "multiselect-react-dropdown": "^2.0.25",
     "next": "^13.1.1",
     "next-seo": "^5.15.0",
