--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react": "^18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.31.0",
     "eslint-config-next": "^13.1.1",
     "eslint-config-standard": "^17.0.0",
@@ -78,5 +79,10 @@
     "semantic-release": "^19.0.5",
     "typescript": "^4.9.4",
     "yarn": "^1.22.19"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
